--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,16 +1,18 @@
+#
+# $$\  $$$$$$\
+# \__|$$ ___$$\
+# $$\ \_/   $$ |
+# $$ |  $$$$$ /
+# $$ |  \___$$\
+# $$ |$$\   $$ |
+# $$ |\$$$$$$  |
+# \__| \______/
+#
 
-# ::::::::::: ::::::::  
-#     :+:    :+:    :+: 
-#     +:+           +:+ 
-#     +#+        +#++:  
-#     +#+           +#+ 
-#     #+#    #+#    #+# 
-# ########### ######## 
-
+# Modifier key
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
+# Font
 font pango:monospace 8
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -98,8 +100,10 @@ bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
+
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
+
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 
@@ -129,16 +133,12 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-}
+# # status bar
+# bar {
+#         status_command i3status
+# }
 
-# Gaps
+# gaps
 for_window [class="^.*"] border pixel 0
 gaps inner 5
 gaps outer 5
-
-
-
