--- a/.config/termite/config
+++ b/.config/termite/config
@@ -1,3 +1,15 @@
+
+#
+#   $$\                                       $$\   $$\
+#   $$ |                                      \__|  $$ |
+# $$$$$$\    $$$$$$\   $$$$$$\  $$$$$$\$$$$\  $$\ $$$$$$\    $$$$$$\
+# \_$$  _|  $$  __$$\ $$  __$$\ $$  _$$  _$$\ $$ |\_$$  _|  $$  __$$\
+#   $$ |    $$$$$$$$ |$$ |  \__|$$ / $$ / $$ |$$ |  $$ |    $$$$$$$$ |
+#   $$ |$$\ $$   ____|$$ |      $$ | $$ | $$ |$$ |  $$ |$$\ $$   ____|
+#   \$$$$  |\$$$$$$$\ $$ |      $$ | $$ | $$ |$$ |  \$$$$  |\$$$$$$$\
+#    \____/  \_______|\__|      \__| \__| \__|\__|   \____/  \_______|
+
+
 [options]
 scroll_on_output = false
 scroll_on_keystroke = true
@@ -7,11 +19,11 @@ allow_bold = true
 dynamic_title = true
 urgent_on_bell = true
 clickable_url = true
-font = Fira Code 9
 scrollback_lines = 10000
 search_wrap = true
-#icon_name = terminal
-#geometry = 640x480
+
+# Font
+font = Fira Code 9
 
 # "system", "on" or "off"
 cursor_blink = system
@@ -23,6 +35,7 @@ cursor_shape = block
 filter_unmatched_urls = true
 
 [colors]
+# gruvbox
 # hard contrast: background = #1d2021
 background = #282828
 # soft contrast: background = #32302f
