--- a/.config/i3/config
+++ b/.config/i3/config
@@ -142,3 +142,6 @@ bindsym $mod+r mode "resize"
 for_window [class="^.*"] border pixel 0
 gaps inner 5
 gaps outer 5
+
+# screensaver
+exec xscreensaver
