--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,7 +25,7 @@ bindsym $mod+Return exec termite
 bindsym $mod+Shift+q kill
 
 # rofi (launcher)
-bindsym $mod+d exec rofi -show run
+bindsym $mod+d exec rofi -separator-style solid -show run
 
 # change focus
 bindsym $mod+j focus left
