--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -44,7 +44,7 @@ font-2 = Wuncon Siji:size:12;1.5
 
 modules-left = i3
 ; modules-center = mpd
-modules-right = volume date battery powermenu
+modules-right = backlight volume date battery powermenu
 
 [module/title]
 type = internal/xwindow
@@ -231,3 +231,37 @@ animation-charging-framerate = 750
 format-discharging-foreground = ${colors.foreground-alt}
 format-charging-foreground = ${colors.foreground-alt}
 format-full-foreground = ${colors.foreground-alt}
+
+[module/backlight]
+type = internal/xbacklight
+
+; XRandR output to get get values from
+; Default: the monitor defined for the running bar
+output = HDMI-1
+
+; Create scroll handlers used to set the backlight value
+; Default: true
+enable-scroll = false
+
+; Available tags:
+;   <label> (default)
+;   <ramp>
+;   <bar>
+format = <label>
+
+; Available tokens:
+;   %percentage% (default)
+label = %percentage%%
+
+; Only applies if <ramp> is used
+ramp-0 = 🌕
+ramp-1 = 🌔
+ramp-2 = 🌓
+ramp-3 = 🌒
+ramp-4 = 🌑
+
+; Only applies if <bar> is used
+bar-width = 10
+bar-indicator = |
+bar-fill = ─
+bar-empty = ─
