--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -237,7 +237,7 @@ type = internal/xbacklight
 
 ; XRandR output to get get values from
 ; Default: the monitor defined for the running bar
-output = HDMI-1
+output = eDP-1
 
 ; Create scroll handlers used to set the backlight value
 ; Default: true
