Ranger config and colorscheme

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,1 +1,47 @@
-# ranger
+
+#
+#  $$$$$$\  $$$$$$\  $$$$$$$\   $$$$$$\   $$$$$$\   $$$$$$\
+# $$  __$$\ \____$$\ $$  __$$\ $$  __$$\ $$  __$$\ $$  __$$\
+# $$ |  \__|$$$$$$$ |$$ |  $$ |$$ /  $$ |$$$$$$$$ |$$ |  \__|
+# $$ |     $$  __$$ |$$ |  $$ |$$ |  $$ |$$   ____|$$ |
+# $$ |     \$$$$$$$ |$$ |  $$ |\$$$$$$$ |\$$$$$$$\ $$ |
+# \__|      \_______|\__|  \__| \____$$ | \_______|\__|
+#                              $$\   $$ |
+#                              \$$$$$$  |
+#                               \______/
+
+# ===================================================================
+# == Options
+# ===================================================================
+
+set viewmode miller
+#set viewmode multipane
+
+#set preview_script ~/.config/ranger/scope.sh
+
+set use_preview_script true
+
+set vcs_aware true
+set vcs_backend_git enabled
+
+set preview_images true
+
+set preview_images_method w3m
+set show_hidden_bookmarks true
+
+set colorscheme butter
+
+set preview_files true
+set preview_directories true
+set collapse_preview true
+
+set status_bar_on_top true
+
+set draw_progress_bar_in_status_bar true
+
+set draw_borders true
+
+set mouse_enabled true
+
+set display_size_in_main_column true
+set display_size_in_status_bar true
