--- a/.config/termite/config
+++ b/.config/termite/config
@@ -23,6 +23,7 @@ scrollback_lines = 10000
 search_wrap = true
 
 # Font
+# font = Source Code Pro Powerline
 # font = Terminess Powerline
 font = Dina 9
 # font = Operator Mono 12
@@ -37,7 +38,8 @@ cursor_shape = block
 filter_unmatched_urls = true
 
 [colors]
-# gruvbox
+# GRUVBOX
+
 # hard contrast: background = #1d2021
 background = #282828
 # soft contrast: background = #32302f
@@ -75,6 +77,45 @@ color14 = #8ec07c
 # light4 + light1
 color7 = #a89984
 color15 = #ebdbb2
+
+# YOUSAI
+# special
+#foreground      = #34302d
+#foreground_bold = #34302d
+#cursor          = #34302d
+#background      = #f5e7de
+
+# black
+#color0  = #666661
+#color8  = #7f7f7a
+
+# red
+#color1  = #992e2e
+#color9  = #b23636
+
+# green
+#color2  = #4c3226
+#color10 = #664233
+
+# yellow
+#color3  = #a67c53
+#color11 = #bf8f60
+
+# blue
+#color4  = #4c7399
+#color12 = #5986b2
+
+# magenta
+#color5  = #bf9986
+#color13 = #d9ae98
+
+# cyan
+#color6  = #d97742
+#color14 = #f2854a
+
+# white
+#color7  = #34302d
+#color15 = #4c4742
 
 [hints]
 #font = Monospace 12
