--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -41,10 +41,11 @@ wm-restack = i3
 font-0 = xos4 terminus:pixelsize=11;
 font-1 = unifont:fontformat=truetype:size=11:antialias=false;0
 font-2 = Wuncon Siji:size:12;1.5
+font-3 = FontAwesome:size:11
 
 modules-left = i3
 ; modules-center = mpd
-modules-right = backlight volume date battery powermenu
+modules-right = volume date battery keyboard powermenu
 
 [module/title]
 type = internal/xwindow
@@ -265,3 +266,40 @@ bar-width = 10
 bar-indicator = |
 bar-fill = ─
 bar-empty = ─
+
+[module/keyboard]
+type = internal/xkeyboard
+
+format = <label-indicator>
+label-indicator-padding = 5
+
+
+label-indicator = 
+label-indicator-background = #e60053
+; label-indicator-padding = 2
+
+; List of indicators to ignore
+blacklist-0 = num lock
+blacklist-1 = scroll lock
+
+[module/redshift]
+type = custom/script
+interval = 5
+
+exec = ~/.config/polybar/redshift.sh
+
+[module/pomodoro]
+type = custom/script
+; Use pomodoro glyphs in Nerd fonts
+; exec = pymodoro --break-prefix " " --pomodoro-prefix " " --pomodoro  --empty  --break  --length 5
+; Use default symbols
+exec = pymodoro --length 5
+label = %output%
+tail = true
+interval = 0
+; Start or reset the timer
+click-left = if [ -e ~/.pomodoro_session ]; then rm ~/.pomodoro_session; else echo "25 5" > ~/.pomodoro_session; fi
+; Increase pomodoro time
+click-right = echo "$((`cut .pomodoro_session -d ' ' -f 1`+5)) 5" > .pomodoro_session
+; Reduce pomodoro time
+click-middle = echo "$((`cut .pomodoro_session -d ' ' -f 1`-5)) 5" > .pomodoro_session
