--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -46,8 +46,7 @@ font-3 = FontAwesome:size:11
 
 tray = right
 modules-left = i3
-; modules-center = mpd
-modules-right = volume date battery keyboard powermenu
+modules-right = volume battery keyboard weather date
 
 tray-position = right
 tray-padding = 0
@@ -300,15 +299,23 @@ exec = ~/.config/polybar/redshift.sh
 [module/pomodoro]
 type = custom/script
 ; Use pomodoro glyphs in Nerd fonts
-; exec = pymodoro --break-prefix " " --pomodoro-prefix " " --pomodoro  --empty  --break  --length 5
+exec = pymodoro --break-prefix " " --pomodoro-prefix " " --pomodoro  --empty  --break  --length 5
 ; Use default symbols
-exec = pymodoro --length 5
+;exec = pymodoro --length 5
 label = %output%
 tail = true
 interval = 0
 ; Start or reset the timer
-click-left = if [ -e ~/.pomodoro_session ]; then rm ~/.pomodoro_session; else echo "25 5" > ~/.pomodoro_session; fi
+click-left = if [ -e ~/.pomodoro_session ] then rm ~/.pomodoro_session else echo "25 5" > ~/.pomodoro_session fi
 ; Increase pomodoro time
 click-right = echo "$((`cut .pomodoro_session -d ' ' -f 1`+5)) 5" > .pomodoro_session
 ; Reduce pomodoro time
 click-middle = echo "$((`cut .pomodoro_session -d ' ' -f 1`-5)) 5" > .pomodoro_session
+
+[module/weather]
+type = custom/script
+interval = 10
+format = <label>
+format-prefix = " "
+format-prefix-foreground = ${colors.foreground-alt}
+exec = ~/.config/polybar/weather
