--- a/.config/termite/config
+++ b/.config/termite/config
@@ -38,45 +38,44 @@ cursor_shape = block
 filter_unmatched_urls = true
 
 [colors]
-# Gruvbox Light
-# hard contrast: background = #f9f5d7
-background = #fbf1c7
-# soft contrast: background = #f2e5bc
-foreground = #3c3836
-foreground_bold = #3c3836
 
-# light0 + gray
-color0 = #fbf1c7
-color8 = #928374
+# special
+foreground      = #f8f8f2
+foreground_bold = #f8f8f2
+cursor          = #f8f8f2
+background      = #272822
 
-# neutral_red + faded_red
-color1 = #cc241d
-color9 = #9d0006
+# black
+color0  = #272822
+color8  = #75715e
 
-# neutral_green + faded_green
-color2 = #98971a
-color10 = #79740e
+# red
+color1  = #f92672
+color9  = #f92672
 
-# neutral_yellow + faded_yellow
-color3 = #d79921
-color11 = #b57614
+# green
+color2  = #a6e22e
+color10 = #a6e22e
 
-# neutral_blue + faded_blue
-color4 = #458588
-color12 = #076678
+# yellow
+color3  = #f4bf75
+color11 = #f4bf75
 
-# neutral_purple + faded_purple
-color5 = #b16286
-color13 = #8f3f71
+# blue
+color4  = #66d9ef
+color12 = #66d9ef
 
-# neutral_aqua + faded_aqua
-color6 = #689d6a
-color14 = #427b58
+# magenta
+color5  = #ae81ff
+color13 = #ae81ff
 
-# dark4 + dark1
-color7 = #7c6f64
-color15 = #3c3836
+# cyan
+color6  = #a1efe4
+color14 = #a1efe4
 
+# white
+color7  = #f8f8f2
+color15 = #f9f8f5
 
 [hints]
 #font = Monospace 12
