--- a/.config/termite/config
+++ b/.config/termite/config
@@ -25,9 +25,9 @@ search_wrap = true
 # Font
 # font = Source Code Pro Powerline
 # font = Terminess Powerline
-font = Dina 9
-# font = Operator Mono 12
-
+# font = Dina 9
+# font = OperatorMonoLight 12
+font = SF MONO 12
 # "system", "on" or "off"
 cursor_blink = system
 
