--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,6 +16,24 @@ set $mod Mod4
 #font pango:Dina 9
 font pango:SF Mono 10
 
+# Colors
+# Set colors from Xresources
+# Change 'color7' and 'color2' to whatever colors you want i3 to use 
+# from the generated scheme.
+# NOTE: The '#f0f0f0' in the lines below is the color i3 will use if
+# it fails to get colors from Xresources.
+set_from_resource $fg i3wm.color7 #f0f0f0
+set_from_resource $bg i3wm.color2 #f0f0f0
+
+# class                 border  backgr. text indicator child_border
+client.focused          $bg     $bg     $fg  $bg       $bg
+client.focused_inactive $bg     $bg     $fg  $bg       $bg
+client.unfocused        $bg     $bg     $fg  $bg       $bg
+client.urgent           $bg     $bg     $fg  $bg       $bg
+client.placeholder      $bg     $bg     $fg  $bg       $bg
+
+client.background       $bg
+
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
@@ -168,7 +186,7 @@ exec --no-startup-id polybar main &
 exec --no-startup-id conky -c ~/.config/polybar/empty_conky &
 
 # wallpaper
-exec --no-startup-id nitrogen --restore &
+# exec --no-startup-id nitrogen --restore &
 
 # dropbox
 exec --no-startup-id dropbox start &
@@ -177,7 +195,7 @@ exec --no-startup-id dropbox start &
 bindsym $mod+Shift+x exec lock -gp
 
 # gaps
-for_window [class="^.*"] border pixel 0
+for_window [class="^.*"] border pixel 2
 gaps inner 8
 gaps outer 8
 
