--- a/.config/neofetch/config
+++ b/.config/neofetch/config
@@ -12,18 +12,18 @@ print_info() {
 
     info "OS" distro
     info "Model" model
-    info "Kernel" kernel
-    info "Uptime" uptime
-    info "Packages" packages
-    info "Shell" shell
-    info "Resolution" resolution
-    info "DE" de
+    # info "Kernel" kernel
+    # info "Uptime" uptime
+    # info "Packages" packages
+    # info "Shell" shell
+    # info "Resolution" resolution
+    # info "DE" de
     info "WM" wm
-    info "WM Theme" wm_theme
-    info "Theme" theme
-    info "Icons" icons
+    # info "WM Theme" wm_theme
+    # info "Theme" theme
+    # info "Icons" icons
     info "Terminal" term
-    info "Terminal Font" term_font
+    # info "Terminal Font" term_font
     info "CPU" cpu
     info "GPU" gpu
     info "Memory" memory
@@ -546,7 +546,7 @@ disk_display="off"
 # Default:  'ascii'
 # Values:   'ascii', 'caca', 'catimg', 'jp2a', 'iterm2', 'off', 'tycat', 'w3m'
 # Flag:     --backend
-image_backend="ascii"
+image_backend="w3m"
 
 # Image Source
 #
@@ -559,7 +559,7 @@ image_backend="ascii"
 # NOTE: 'auto' will pick the best image source for whatever image backend is used.
 #       In ascii mode, distro ascii art will be used and in an image mode, your
 #       wallpaper will be used.
-image_source="auto"
+image_source="wallpaper"
 
 
 # Ascii Options
@@ -610,7 +610,7 @@ ascii_bold="on"
 # Default:  'off'
 # Values:   'on', 'off'
 # Flag:     --loop
-image_loop="off"
+image_loop="on"
 
 # Thumbnail directory
 #
@@ -626,7 +626,7 @@ thumbnail_dir="${XDG_CACHE_HOME:-${HOME}/.cache}/thumbnails/neofetch"
 #
 # See this wiki page to learn about the fit and fill options.
 # https://github.com/dylanaraps/neofetch/wiki/What-is-Waifu-Crop%3F
-crop_mode="normal"
+crop_mode="fit"
 
 # Crop offset
 # Note: Only affects 'normal' crop mode.
@@ -651,7 +651,7 @@ image_size="auto"
 # Default: '3'
 # Values:  'num', '-num'
 # Flag:    --gap
-gap=3
+gap=4
 
 # Image offsets
 # Only works with the w3m backend.
@@ -660,8 +660,8 @@ gap=3
 # Values:  'px'
 # Flags:   --xoffset
 #          --yoffset
-yoffset=0
-xoffset=0
+yoffset=2
+xoffset=2
 
 # Image background color
 # Only works with the w3m backend.
