trying to make image preview work

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -29,7 +29,7 @@ set preview_images true
 set preview_images_method w3m
 set show_hidden_bookmarks true
 
-set colorscheme butter
+# set colorscheme butter
 
 set preview_files true
 set preview_directories true
