ranger with image previews using w3m

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -17,7 +17,7 @@
 set viewmode miller
 #set viewmode multipane
 
-#set preview_script ~/.config/ranger/scope.sh
+set preview_script ~/.config/ranger/scope.sh
 
 set use_preview_script true
 
