add media server warp

--- a/.warprc
+++ b/.warprc
@@ -5,3 +5,4 @@ nature:~/Dropbox/code/kadenze/nature-of-code
 walls:~/Dropbox/wallpapers
 processing:~/Dropbox/code/processing/processing
 colors:~/Color-Scripts/color-scripts
+ums:/opt/ums
