add a new project warp

--- a/.warprc
+++ b/.warprc
@@ -6,3 +6,5 @@ walls:~/Dropbox/wallpapers
 processing:~/Dropbox/code/processing/processing
 colors:~/Color-Scripts/color-scripts
 ums:/opt/ums
+site:~/Dropbox/code/felipecustodio.github.io
+parallel:~/Dropbox/code/parallel
