--- a/.warprc
+++ b/.warprc
@@ -8,3 +8,4 @@ colors:~/Color-Scripts/color-scripts
 ums:/opt/ums
 site:~/Dropbox/code/felipecustodio.github.io
 parallel:~/Dropbox/code/parallel
+polybar:~/.config/polybar
