--- a/.config/rofi/config
+++ b/.config/rofi/config
@@ -1,3 +1,2 @@
-#include /home/user/path/to/gruvbox-dark.theme
-#include "/usr/share/rofi/themes//android_notification.theme"
-#rofi.theme: /usr/share/rofi/themes//Monokai.rasi
+# Dark theme.
+rofi.theme: ~/.cache/wal/colors-rofi-dark.rasi
