--- a/.config/retroarch/retroarch.cfg
+++ b/.config/retroarch/retroarch.cfg
@@ -30,7 +30,7 @@ joypad_autoconfig_dir = "~/.config/retroarch/autoconfig"
 audio_filter_dir = "default"
 savefile_directory = "default"
 savestate_directory = "default"
-rgui_browser_directory = "default"
+rgui_browser_directory = "~/ROMs/games"
 rgui_config_directory = "~/.config/retroarch/config"
 overlay_directory = "~/.config/retroarch/overlay"
 video_driver = "gl"
@@ -50,9 +50,9 @@ audio_rate_control_delta = "0.005000"
 audio_max_timing_skew = "0.050000"
 audio_volume = "0.000000"
 audio_mixer_volume = "0.000000"
-input_overlay_opacity = "0.700000"
+input_overlay_opacity = "0.960000"
 input_overlay_scale = "1.000000"
-menu_wallpaper_opacity = "0.300000"
+menu_wallpaper_opacity = "0.350000"
 menu_framebuffer_opacity = "0.900000"
 menu_footer_opacity = "1.000000"
 menu_header_opacity = "1.000000"
@@ -90,10 +90,10 @@ dpi_override_value = "200"
 menu_thumbnails = "2"
 xmb_alpha_factor = "75"
 xmb_scale_factor = "100"
-xmb_theme = "1"
-xmb_menu_color_theme = "0"
+xmb_theme = "3"
+xmb_menu_color_theme = "1"
 materialui_menu_color_theme = "0"
-menu_shader_pipeline = "2"
+menu_shader_pipeline = "0"
 audio_out_rate = "48000"
 custom_viewport_width = "935"
 custom_viewport_height = "701"
@@ -234,7 +234,7 @@ video_threaded = "false"
 video_shared_context = "false"
 auto_screenshot_filename = "true"
 video_force_srgb_disable = "false"
-video_fullscreen = "false"
+video_fullscreen = "true"
 bundle_assets_extract_enable = "false"
 video_vsync = "true"
 video_hard_sync = "false"
@@ -310,7 +310,7 @@ cheevos_verbose_enable = "false"
 input_overlay_enable = "true"
 input_overlay_enable_autopreferred = "true"
 input_overlay_show_physical_inputs = "false"
-input_overlay_hide_in_menu = "true"
+input_overlay_hide_in_menu = "false"
 network_cmd_enable = "false"
 stdin_cmd_enable = "false"
 network_remote_enable = "false"
@@ -355,7 +355,7 @@ network_remote_enable_user_p13 = "false"
 network_remote_enable_user_p14 = "false"
 network_remote_enable_user_p15 = "false"
 network_remote_enable_user_p16 = "false"
-log_verbosity = "false"
+log_verbosity = "true"
 perfcnt_enable = "false"
 video_message_color = "ffff00"
 menu_entry_normal_color = "ffffffff"
@@ -2807,8 +2807,42 @@ input_player16_turbo = "nul"
 input_player16_turbo_btn = "nul"
 input_player16_turbo_axis = "nul"
 input_player16_turbo_mbtn = "nul"
+menu_wallpaper = "~/games/il_fullxfull.636744754_nfvw.jpg"
+led_driver = "null"
+netplay_mitm_server = "nyc"
+audio_resampler_quality = "3"
+menu_font_color_red = "255"
+menu_font_color_green = "255"
+menu_font_color_blue = "255"
+netplay_share_digital = "1"
+netplay_share_analog = "1"
+netplay_request_device_p1 = "false"
+netplay_request_device_p2 = "false"
+netplay_request_device_p3 = "false"
+netplay_request_device_p4 = "false"
+netplay_request_device_p5 = "false"
+netplay_request_device_p6 = "false"
+netplay_request_device_p7 = "false"
+netplay_request_device_p8 = "false"
+netplay_request_device_p9 = "false"
+netplay_request_device_p10 = "false"
+netplay_request_device_p11 = "false"
+netplay_request_device_p12 = "false"
+netplay_request_device_p13 = "false"
+netplay_request_device_p14 = "false"
+netplay_request_device_p15 = "false"
+netplay_request_device_p16 = "false"
+video_shader_watch_files = "false"
+content_show_settings = "true"
+content_show_favorites = "true"
+content_show_images = "true"
+content_show_music = "true"
+content_show_video = "true"
+content_show_netplay = "true"
+content_show_history = "true"
+content_show_add = "true"
 xmb_font = ""
-xmb_show_settings_password = ""
+content_show_settings_password = ""
 kiosk_mode_password = ""
 netplay_nickname = ""
 video_filter = ""
@@ -2818,8 +2852,7 @@ netplay_password = ""
 netplay_spectate_password = ""
 core_options_path = ""
 video_shader = ""
-menu_wallpaper = ""
-input_overlay = ""
+input_overlay = "~/.config/retroarch/overlay/sony-crt.cfg"
 video_font_path = ""
 content_history_dir = ""
 cache_directory = ""
