retroarch general settings

--- a/.config/retroarch/retroarch.cfg
+++ b/.config/retroarch/retroarch.cfg
@@ -68,7 +68,7 @@ netplay_check_frames = "600"
 input_bind_timeout = "5"
 input_turbo_period = "6"
 input_duty_cycle = "3"
-input_max_users = "6"
+input_max_users = "1"
 input_menu_toggle_gamepad_combo = "0"
 audio_latency = "64"
 audio_block_frames = "0"
@@ -252,7 +252,7 @@ location_allow = "false"
 video_font_enable = "true"
 core_updater_auto_extract_archive = "true"
 camera_allow = "false"
-menu_unified_controls = "true"
+menu_unified_controls = "false"
 threaded_data_runloop_enable = "true"
 menu_throttle_framerate = "true"
 menu_linear_filter = "true"
@@ -368,19 +368,19 @@ soft_filter_index = "0"
 current_resolution_id = "0"
 flicker_filter_index = "0"
 input_player1_b = "space"
-input_player1_b_btn = "nul"
+input_player1_b_btn = "0"
 input_player1_b_axis = "nul"
 input_player1_b_mbtn = "nul"
-input_player1_y = "pagedown"
-input_player1_y_btn = "nul"
+input_player1_y = "nul"
+input_player1_y_btn = "3"
 input_player1_y_axis = "nul"
 input_player1_y_mbtn = "nul"
 input_player1_select = "tab"
-input_player1_select_btn = "nul"
+input_player1_select_btn = "8"
 input_player1_select_axis = "nul"
 input_player1_select_mbtn = "nul"
 input_player1_start = "escape"
-input_player1_start_btn = "nul"
+input_player1_start_btn = "9"
 input_player1_start_axis = "nul"
 input_player1_start_mbtn = "nul"
 input_player1_up = "up"
@@ -400,11 +400,11 @@ input_player1_right_btn = "16"
 input_player1_right_axis = "nul"
 input_player1_right_mbtn = "nul"
 input_player1_a = "x"
-input_player1_a_btn = "0"
+input_player1_a_btn = "1"
 input_player1_a_axis = "nul"
 input_player1_a_mbtn = "nul"
 input_player1_x = "s"
-input_player1_x_btn = "3"
+input_player1_x_btn = "2"
 input_player1_x_axis = "nul"
 input_player1_x_mbtn = "nul"
 input_player1_l = "q"
@@ -428,7 +428,7 @@ input_player1_l3_btn = "11"
 input_player1_l3_axis = "nul"
 input_player1_l3_mbtn = "nul"
 input_player1_r3 = "shift"
-input_player1_r3_btn = "nul"
+input_player1_r3_btn = "12"
 input_player1_r3_axis = "nul"
 input_player1_r3_mbtn = "nul"
 input_player1_l_x_plus = "nul"
@@ -644,7 +644,7 @@ input_game_focus_toggle_btn = "nul"
 input_game_focus_toggle_axis = "nul"
 input_game_focus_toggle_mbtn = "nul"
 input_menu_toggle = "f1"
-input_menu_toggle_btn = "nul"
+input_menu_toggle_btn = "10"
 input_menu_toggle_axis = "nul"
 input_menu_toggle_mbtn = "nul"
 input_player2_b = "nul"
@@ -2841,6 +2841,7 @@ content_show_video = "true"
 content_show_netplay = "true"
 content_show_history = "true"
 content_show_add = "true"
+input_overlay = "~/.config/retroarch/overlay/sony-crt.cfg"
 xmb_font = ""
 content_show_settings_password = ""
 kiosk_mode_password = ""
@@ -2852,7 +2853,6 @@ netplay_password = ""
 netplay_spectate_password = ""
 core_options_path = ""
 video_shader = ""
-input_overlay = "~/.config/retroarch/overlay/sony-crt.cfg"
 video_font_path = ""
 content_history_dir = ""
 cache_directory = ""
