update compton for nvidia and tearinga

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -11,4 +11,51 @@
 #                                   $$ |
 #                                   \__|
 
+#################################
+#
+# Backend
+#
+#################################
 
+# Backend to use: "xrender" or "glx".
+# GLX backend is typically much faster but depends on a sane driver.
+backend = "glx";
+
+#################################
+#
+# GLX backend
+#
+#################################
+
+glx-no-stencil = true;
+glx-copy-from-front = false;
+glx-swap-method = "undefined";
+
+#################################
+#
+# Fading
+#
+#################################
+
+# Fade windows during opacity changes.
+fading = true;
+# The time between steps in a fade in milliseconds. (default 10).
+fade-delta = 4;
+# Opacity change between steps while fading in. (default 0.028).
+fade-in-step = 0.03;
+# Opacity change between steps while fading out. (default 0.03).
+fade-out-step = 0.03;
+# Fade windows in/out when opening/closing
+# no-fading-openclose = true;
+
+#################################
+#
+# V-Sync
+#
+#################################
+
+vsync = "opengl-swc";
+dbe = false;
+paint-on-overlay = true;
+sw-opti = false;
+unredir-if-possible = true;
