--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -29,7 +29,11 @@ backend = "glx";
 
 glx-no-stencil = true;
 glx-copy-from-front = false;
-glx-swap-method = "undefined";
+# glx-swap-method = "undefined";
+
+glx-swap-method = 2;
+xrender-sync = true;
+xrender-sync-fence = true;
 
 #################################
 #
