the anti-tearing journey

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -29,9 +29,9 @@ backend = "glx";
 
 glx-no-stencil = true;
 glx-copy-from-front = false;
-# glx-swap-method = "undefined";
+glx-swap-method = "undefined";
 
-glx-swap-method = 2;
+# glx-swap-method = 2;
 xrender-sync = true;
 xrender-sync-fence = true;
 
@@ -57,7 +57,7 @@ fade-out-step = 0.03;
 # V-Sync
 #
 #################################
-
+refresh-rate = 0;
 vsync = "opengl-swc";
 dbe = false;
 paint-on-overlay = true;
