--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,5 +1,5 @@
 [Settings]
-gtk-theme-name=Flatabulous-wal
+gtk-theme-name=wal
 gtk-icon-theme-name=la-capitaine-icon-theme
 gtk-font-name=SF Pro Text 11
 gtk-cursor-theme-name=elementary
