--- a/.warprc
+++ b/.warprc
@@ -9,4 +9,6 @@ ums:/opt/ums
 site:~/Dropbox/code/felipecustodio.github.io
 parallel:~/Dropbox/code/parallel
 polybar:~/.config/polybar
-roms:~/ROMs
+games:~/ROMs/games
+nesdev:~/games/NES
+roms:~/ROMs/games
