--- a/.warprc
+++ b/.warprc
@@ -12,3 +12,12 @@ polybar:~/.config/polybar
 games:~/ROMs/games
 nesdev:~/games/NES
 roms:~/ROMs/games
+web:~/Dropbox/code/web
+comp:~/Computer Science
+org:~/Dropbox/code/computer-organization
+graph:~/Dropbox/code/graph
+dip:~/Dropbox/code/digital-image-processing
+recommender:~/Dropbox/code/recommender-systems
+ai:~/Dropbox/code/ai
+pics:~/Pictures
+recom:~/Dropbox/code/recommender-systems/assignment1
