shadows and fading

--- a/.config/compton.conf
+++ b/.config/compton.conf
@@ -40,17 +40,29 @@ xrender-sync-fence = true;
 # Fading
 #
 #################################
-
 # Fade windows during opacity changes.
 fading = true;
 # The time between steps in a fade in milliseconds. (default 10).
-fade-delta = 4;
+fade-delta = 10;
 # Opacity change between steps while fading in. (default 0.028).
 fade-in-step = 0.03;
 # Opacity change between steps while fading out. (default 0.03).
 fade-out-step = 0.03;
 # Fade windows in/out when opening/closing
 # no-fading-openclose = true;
+
+#################################
+#
+# Shadow
+#
+#################################
+shadow = true;
+no-dnd-shadow = false;
+no-dock-shadow = false;
+clear-shadow = true;
+shadow-radius = 7;
+shadow-offset-x = -7;
+shadow-offset-y = -7;
 
 #################################
 #
