--- a/.warprc
+++ b/.warprc
@@ -21,3 +21,4 @@ recommender:~/Dropbox/code/recommender-systems
 ai:~/Dropbox/code/ai
 pics:~/Pictures
 recom:~/Dropbox/code/recommender-systems/assignment1
+scripts:~/.scripts
