--- a/.config/redshift.conf
+++ b/.config/redshift.conf
@@ -1,11 +1,11 @@
 [redshift]
-temp-day=4200
-temp-night=1900
+temp-day=5500
+temp-night=2700
 transition=1
 ;brightness=0.9
 ;brightness-day=0.7
 ;brightness-night=0.4
-gamma=0.8
+;gamma=0.8
 ;gamma=0.8:0.7:0.8
 ;gamma-day=0.8:0.7:0.8
 ;gamma-night=0.6
