--- a/.config/termite/config
+++ b/.config/termite/config
@@ -28,11 +28,10 @@ search_wrap = true
 # font = creep
 # font = tamzen
 # font = t cherry Wide 11
-font = Input Mono 14
+font = Input Mono 11
 
 # "system", "on" or "off"
-cursor_blink = system
-
+cursor_blink = off
 
 # "block", "underline" or "ibeam"
 cursor_shape = block
