:herb: draw terminals with mouse

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -101,7 +101,6 @@ set $ws10 10
 # assign apps to workspaces
 assign [class="Spotify"] 5
 
-
 # switch to workspace
 bindsym $mod+1 workspace $ws1
 bindsym $mod+2 workspace $ws2
@@ -217,6 +216,9 @@ exec --no-startup-id polybar -c ~/.config/polybar/main main &
 # lock screen
 bindsym $mod+Shift+x exec lock
 
+# draw terminal
+bindsym $mod+Shift+Return exec ~/.scripts/drawterm.sh
+
 # gaps
 for_window [class="^.*"] border pixel 6
 #gaps inner 8
@@ -234,3 +236,10 @@ for_window [class="feh"] floating enable
 for_window [class="Feh"] floating enable
 for_window [class="atom"] floating enable
 for_window [class="Atom"] floating enable
+for_window [class="urxvt"] floating enable
+for_window [class="URxvt"] floating enable
+for_window [class="Atom"] resize set 640 480
+for_window [class="atom"] resize set 640 480
+for_window [class="java"] floating enable
+for_window [class="Java"] floating enable
+for_window [class="floatermite"] floating enable
