:herb: update file handling, gtk

--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,8 +1,8 @@
 [Settings]
 gtk-theme-name=wal
-gtk-icon-theme-name=la-capitaine-icon-theme
-gtk-font-name=SF Pro Text 11
-gtk-cursor-theme-name=elementary
+gtk-icon-theme-name=Oranchelo
+gtk-font-name=SF Pro Text Medium 11
+gtk-cursor-theme-name=Simple-and-Soft
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
 gtk-toolbar-icon-size=GTK_ICON_SIZE_LARGE_TOOLBAR
