--- a/config/gtk-3.0/settings.ini
+++ b/config/gtk-3.0/settings.ini
@@ -1,7 +1,7 @@
 [Settings]
 gtk-theme-name=snow-master
 gtk-icon-theme-name=Arc
-gtk-font-name=SFNS Display 11
+gtk-font-name=Overpass Light 12
 gtk-cursor-theme-name=Breeze_Snow
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
