--- a/config/compton.conf
+++ b/config/compton.conf
@@ -35,6 +35,8 @@ glx-swap-method = "undefined";
 xrender-sync = true;
 xrender-sync-fence = true;
 
+detect-client-opacity = true;
+
 #################################
 #
 # Fading
